compiler/tests/invalid_programs/multiple_variable_typedecs.jm
!TypeError

var:String = "foo"
var:String = "bar"
